and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

- 16 Feb. 2015 Hisaya Kurashige (particles-V10-00-28)
- Add gamma-gamma, omega-gamma modes to EtaPrime 
  and update braching ratio

- 18 Nov. 2014 Makoto Asai (particles-V10-00-27)
- Fix G4IonTable to delete thread-local string objects.

- 17 Nov. 2014 Makoto Asai (particles-V10-00-26)
- Fix G4ParticleTable to make sure all dynamically created ions to
  be deleted at the end of the program.

- 23 Oct. 2014 Andrea Dotti - John Apostolakis (particles-V10-00-25)
- Revised G4ParticlesWorkspace to use new G4TWorkspacePool from global
- Requires global-V10-00-39

- 23 Oct. 2014 Andrea Dotti - John Apostolakis (particles-V10-00-24)
- Introduced workspace class for particle definition
- Revised G4PDefSplitter class to add utility methods  

- 11 Oct. 2014 Hisaya Kurashige (particles-V10-00-23)
- Remove FindIon/GetIon methods from G4ParticleTable

- 23 Sep. 2014 Hisaya Kurashige (particles-V10-00-22)
- Remove unused class of G4IsomerTable (G4NuclideTable is used)

- 12 Sep. 2014 Hisaya Kurashige (particles-V10-00-21)
- Update mass, width and lifetime according to PDG2014

- 19 Aug. 2014 Makoto Asai (particles-V10-00-20)
- Re-tag for testing.

- 18 Aug. 2014 Makoto Asai (particles-V10-00-19)
- Fix G4IonTable and G4NuclideTable so that now G4NuclideTable
  object can be created without preloading any ion.

- 18 Jul. 2014 Andrea Dotti (particles-V10-00-18)
- Revert code changes in G4IonTable to logic of tag -16 
  New logic is not clear, issues to be solved with time 
  and we prefer to do it later. Keep previous bug-fix
  code even if now has no effect.

- 18 Jul. 2014 Andrea Dotti 
- Bug fixing: ensure size methods  check null pointer condition 