@@ -17,6 +17,13 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+- 27 January 2016  Hisaya Kurashige (particles-V10-00-29)
+- Fix the bug(#1820) in G4PhaseSpaceDecayChannel
+
+- 28 December 2015  Makoto Asai
+- Fix wrong argument order CreateIon(A,Z,LL,0.0) of line #485 in
+  G4IonTable.cc to CreateIon(Z,A,LL,0.0).
+
 - 16 Feb. 2015 Hisaya Kurashige (particles-V10-00-28)
 - Add gamma-gamma, omega-gamma modes to EtaPrime 
   and update braching ratio
